Upload template for HW2

--- a/index.html
+++ b/index.html
@@ -1,194 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Newspaper</title>
     <link rel="stylesheet" href="style.css">
-    <title>New York Times</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div class="container">
-    <div class="row justify-content-center">
-        <img id="logo" src="img/logo.png" alt="">
-    </div>
-    <div class="row">
-        <div class="col-6" id="head-date">Thursday, March 19, 2020</div>
-        <div class="col-6" id="today-paper">Today's paper</div>
-    </div>
-    <hr color="black" style="margin-bottom: 0.3rem">
-    <hr color="black" style="margin-top: 0.3rem">
-    <div class="row justify-content-center">
-        <h3>U.S. Plans to Tell Citizens Abdroad to Come Home Soon or Stay There</h3>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <b id="header-list">Economic Toll Rising, Congress Races on $1 Trillion Relief Plan</b>
-            <ul id="first-list">
-                <li>
-                    The State Department is preparing to announce that American citizen abroad  should either return home or stay in place
-                </li>
-                <li>
-                    The death toll in Italy soared to 3.405, surpassing China's total.
-                </li>
-                <li>
-                    President Trump said the F.D.A. was granting "comprassionate use," allowing patients to use a drug that has not yet been approved. Followed our updates.
-                </li>
-            </ul>
-        </div>
-        <div class="col-5">
-            <img src="img/map.PNG" alt="map" style="width: 100%">
-        </div>
-        <div class="col-4" id="third-col">
-            <div class="row">
-                <div class="col-6">
-                    <img src="img/photo_1.PNG" alt="">
-                    <b>World Feared China Over Coronavirus. Now the Tables Are Turned.</b>
-                    <p>
-                        Asian Countries that suffered through the pandemic first are  working to guard against a new wave of contagion from the West.
-                    </p>
-                </div>
-                <div class="col-6" id="inside-second-column">
-                    <img src="img/photo_2.PNG" alt="">
-                    <b>Before Outbreak, a Cascade of Warnings Went Unheeded</b>
-                    <p>
-                        Government exercises, including a pandemic simulation last year, made it clear that the U.S. was not ready for a crisis like the coronavirus.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr color="black" style="margin-top: 0.3rem">
-    <div class="row">
-        <div class="col-8">
-            <div class="row">
-                <div class="col-6">
-                    <b>
-                        The Staggering Rise in Jobless Claims This Week
-                    </b>
-                    <p>
-                        When we write the history of the coronavirus recession, we’ll say the downturn started in early March.
-                    </p>
-                </div>
-                <div class="col-6">
-                    <img src="img/graf.PNG" alt="">
-                </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-7">
-                    <b>
-                        Amid Virus and Market Tumult, Wall Street Lives a New Reality
-                    </b>
-                    <p>
-                        With coronavirus fears engulfing New York City and markets tanking, the finance industry is busier than ever — and learning to work from home.
-                    </p>
-                </div>
-                <div class="col-5 border-left">
-                    <b>With dining rooms empty across the country, restaurants have urgently reinvented themselves as takeout and delivery hubs.</b>
-                </div>
-            </div>
-            <hr color="black">
-            <div class="row">
-                <div class="col-4">
-                    <div class="row">
-                        <div class="col-12">
-                            <b>World Feared China Over Coronavirus. Now the Tables Are Turned.</b>
-                            <p>
-                                Asian countries that suffered through the pandemic first are working to guard against a new wave of contagion from the West.
-                            </p>
-                            <hr>
-                        </div>
-                        <div class="col-12">
-                            <b>‘Wash Our Hands? Some People Can’t Wash Their Kids for a Week.’</b>
-                            <p>
-                                In devastated northwestern Syria, the coronavirus may already be spreading in packed displacement camps, and the international response is weeks behind.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-8 border-left">
-                    <img src="img/countries.PNG" alt="">
-                </div>
-            </div>
-        </div>
-        <div class="col-4 border-left">
-            <div class="row">
-                <div class="col-6">
-                    <b>The President Is Lying About Coronavirus</b>
-                    <p>Donald Trump’s claims about the pandemic have been at odds with the information shared by his public health advisors. Take a look.</p>
-                </div>
-                <div class="col-6">
-                    <img src="img/president.png" alt="">
-                </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-6">
-                    <div class="row">
-                        <div class="col-12">
-                            <p class="name">Fran Marion</p>
-                            <b class="text">‘If I Caught the Coronavirus, Would You Want Me Making Your Next Meal?</b>
-                            <hr>
-                        </div>
-                        <div class="col-12">
-                            <p class="name">The Editorial Board</p>
-                            <b class="text">What New York Can Do Now</b>
-                            <hr>
-                        </div>
-                        <div class="col-12">
-                            <p class="name">Elliot Kukla</p>
-                            <b class="text">My Life Is More ‘Disposable’ During This Pandemic</b>
-                            <hr>
-                        </div>
-                        <div class="col-12">
-                            <p class="name">Jan-Werner Müller</p>
-                            <b class="text">We Must Help One Another or Die</b>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 border-left">
-                    <div class="row">
-                        <div class="col-12">
-                            <p class="name">Kristen  Radtke</p>
-                            <b class="text">What Do We Lose When We Stop Touching Each Other?</b>
-                            <hr>
-                        </div>
-                        <div class="col-12">
-                            <p class="name">Sylvie Kauffmann</p>
-                            <b class="text">A French Call to Arms Against the Virus</b>
-                            <hr>
-                        </div>
-                        <div class="col-12">
-                            <p class="name">Gail Collins</p>
-                            <b class="text">Is It Time to Give Trump a Grade?</b>
-                            <hr>
-                        </div>
-                        <div class="col-12">
-                            <p class="name">Alain de Botton</p>
-                            <b class="text">Camus on the Coronavirus</b>
-                            <hr>
-                        </div>
-                        <div class="col-12">
-                            <p class="name">Alia Malek</p>
-                            <b class="text">‘He Didn’t Want to Lie in a Grave That Couldn’t Be Visited’</b>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr color="black" style="margin-top: 0.3rem">
-    <img src="img/logo.png" alt="" id="footer-logo">
-</div>
 
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
