--- a/index.html
+++ b/index.html
@@ -7,6 +7,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+<div class="container">
+    <div class="flex-element-1">
+        <img id="logo" src="img/logo.png" alt="">
+    </div>
+    <div class="flex-element-2">
+        <div id="head-date">Thursday, March 19, 2020</div>
+        <div id="today-paper">Today's paper</div>
+    </div>
+    <hr color="black" style="margin-bottom: 0.1rem">
+    <hr color="black" style="margin-top: 0.1rem">
+    <div class="flex-element-1">
+        <h3>U.S. Plans to Tell Citizens Abdroad to Come Home Soon or Stay There</h3>
+    </div>
+    <div class="flex-element-3">
+        <div class="flex-element-3-1">
+            <b id="header-list">Economic Toll Rising, Congress Races on $1 Trillion Relief Plan</b>
+            <ul id="first-list">
+                <img src="img/map.PNG" alt="map">
+                <li>
+                    The State Department is preparing to announce that American citizen abroad  should either return home or stay in place
+                </li>
+                <li>
+                    The death toll in Italy soared to 3.405, surpassing China's total.
+                </li>
+                <li>
+                    President Trump said the F.D.A. was granting "comprassionate use," allowing patients to use a drug that has not yet been approved. Followed our updates.
+                </li>
+            </ul>
+        </div>
+        <div class="flex-column border-left">
+            <img src="img/photo_1.PNG" alt="">
+            <b>World Feared China Over Coronavirus. Now the Tables Are Turned.</b>
+            <p>
+                Asian Countries that suffered through the pandemic first are  working to guard against a new wave of contagion from the West.
+            </p>
+        </div>
+        <div class="flex-column">
+            <img src="img/photo_2.PNG" alt="">
+            <b>Before Outbreak, a Cascade of Warnings Went Unheeded</b>
+            <p>
+                Government exercises, including a pandemic simulation last year, made it clear that the U.S. was not ready for a crisis like the coronavirus.
+            </p>
+        </div>
+    </div>
+    <hr color="black" style="margin-bottom: 0.1rem">
+    <div class="flex-element-4">
+        <div class="flex-element-4-1">
+            <div>
+                <b>
+                    The Staggering Rise in Jobless Claims This Week
+                </b>
+                <p>
+                    When we write the history of the coronavirus recession, we’ll say the downturn started in early March.
+                </p>
+            </div>
+            <img src="img/graf.PNG" alt="">
+        </div>
+        <div class="flex-element-4-2 border-left">
+            <div class="col-7">
+                <b>
+                    Amid Virus and Market Tumult, Wall Street Lives a New Reality
+                </b>
+                <p>
+                    With coronavirus fears engulfing New York City and markets tanking, the finance industry is busier than ever — and learning to work from home.
+                </p>
+            </div>
+            <div class="col-5">
+                <b>With dining rooms empty across the country, restaurants have urgently reinvented themselves as takeout and delivery hubs.</b>
+            </div>
+        </div>
+    </div>
+    <hr color="black" style="margin-top: 0.1rem">
+    <div class="flex-element-5">
+        <div class="flex-element-5-1">
+            <div>
+                <b>World Feared China Over Coronavirus. Now the Tables Are Turned.</b>
+                <p>
+                    Asian countries that suffered through the pandemic first are working to guard against a new wave of contagion from the West.
+                </p>
+                <hr>
+            </div>
+            <div>
+                <b>‘Wash Our Hands? Some People Can’t Wash Their Kids for a Week.’</b>
+                <p>
+                    In devastated northwestern Syria, the coronavirus may already be spreading in packed displacement camps, and the international response is weeks behind.
+                </p>
+            </div>
+        </div>
+        <div class="flex-element-5-2">
+            <img src="img/countries.PNG" alt="">
+        </div>
+        <div class="flex-element-5-3 border-left">
+            <div>
+                <b>The President Is Lying About Coronavirus</b>
+                <p>Donald Trump’s claims about the pandemic have been at odds with the information shared by his public health advisors. Take a look.</p>
+            </div>
+            <img src="img/president.png" alt="">
+        </div>
+    </div>
+    <hr color="black" style="margin-top: 0.1rem">
+    <img src="img/logo.png" alt="" id="footer-logo">
+</div>
 </body>
 </html>
